--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,5 +21,5 @@
     published_ports:
       - 80:80
       - 443:443
-    devices:
+    volumes:
       - "{{ haproxy_docker_folder }}/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro"
