--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: Restart HAProxy
   docker_container:
-    name: haproxy
+    name: "{{ haproxy_name }}"
+    state: started
     restart: true
